java8.spoofax3/test/statics/java/packages/classes-with-same-name-in-unnamed-package.no.spt.bak
module packages/classes-with-same-name-in-unnamed-package_no

language metaborg-java

test classes-with-same-name-in-unnamed-package [[

test;



// error: duplicate class

[A]
public class A {}

[A]
public class A {}

]] analysis fails
   run javacFails to ""
